src/snapshots/2ec__tests__check_error_dividebyzero-2.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│   /                             │     "
"│                               78│     "
"│DEC (10)                      int│     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│       0 1 2 3 4 5 6 7 8 9       │     "
"│   + - * / %    & | ^ n ~ < >    │     "
"│ mem: store recall               │     "
"│base: Hex Oct Bin                │     "
"│mode: decimAl Sci                │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│? help      ESC clear        quit│     "
"╰─────────────────────────────────╯     "
"                                        "
