src/snapshots/2ec__tests__check_error_notanumber-2.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│                                 │     "
"│                              -45│     "
"│DEC (10)                      int│     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│       0 1 2 3 4 5 6 7 8 9       │     "
"│   + - * / %    & | ^ n ~ < >    │     "
"│root: sQrt                       │     "
"│ mem: store recall               │     "
"│base: Hex Oct Bin                │     "
"│mode: decimAl Sci                │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│? help      ESC clear        quit│     "
"╰─────────────────────────────────╯     "
"                                        "
