src/snapshots/2ec__tests__check_error_notanumber.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│              ERROR              │     "
"│          not a number           │     "
"│                                 │     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│? help      ESC clear        quit│     "
"╰─────────────────────────────────╯     "
"                                        "
