src/snapshots/2ec__tests__constants_from_config.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│                                 │     "
"│                                0│     "
"│DEC (10)                      int│     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│        select a constant        │     "
"│                                 │     "
"│2: "sqrt of 2"                   │     "
"│e: "e"                           │     "
"│g: "golden ratio"                │     "
"│k: "kmh / mph"                   │     "
"│p: "pi"                          │     "
"│t: "tau"                         │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│ESC: clear   ?: help      q: quit│     "
"╰─────────────────────────────────╯     "
"                                        "
