src/snapshots/2ec__tests__dec_base_dec_mode_render.snap
---
source: src/main.rs
expression: ta.backend()
---
"╭─────────────────────────────────╮     "
"│   + 4.9                         │     "
"│                        123.45000│     "
"│DEC (10)                      dec│     "
"╰─────────────────────────────────╯     "
"╭─────────────────────────────────╮     "
"│      0 1 2 3 4 5 6 7 8 9 .      │     "
"│            + - * / %            │     "
"│ mem: store recall               │     "
"│base: Hex Oct Bin                │     "
"│mode: Int Sci sigFig             │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│                                 │     "
"│? help      ESC clear        quit│     "
"╰─────────────────────────────────╯     "
"                                        "
